[#32] Do not set height to avoid scrollbars if container is less than 600px

--- a/ckanext/spatial/public/css/geojson_preview.css
+++ b/ckanext/spatial/public/css/geojson_preview.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 600px;
+  max-height: 600px;
   padding: 0;
   margin: 0;
   background: none;
